objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>BIN</fullName>
        <description>BINS Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Case Closed</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Refused</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>DAS</fullName>
        <description>DAS support process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Awaiting Assignment</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Cancelled</fullName>
        </values>
        <values>
            <fullName>Case Closed</fullName>
        </values>
        <values>
            <fullName>Closure Rejected</fullName>
        </values>
        <values>
            <fullName>In Progress</fullName>
        </values>
        <values>
            <fullName>Investigation Completed</fullName>
        </values>
        <values>
            <fullName>Job Accepted</fullName>
        </values>
        <values>
            <fullName>Outcome</fullName>
        </values>
        <values>
            <fullName>RAC</fullName>
        </values>
        <values>
            <fullName>Ranger Assigned</fullName>
        </values>
        <values>
            <fullName>Ranger on the way</fullName>
        </values>
        <values>
            <fullName>Requires Investigation</fullName>
        </values>
        <values>
            <fullName>Service Appointment Completed</fullName>
        </values>
        <values>
            <fullName>Submitted for Closure</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_Validation_Status__c</fullName>
        <label>Address Validation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exact matching address found</fullName>
                </value>
                <value>
                    <fullName>Multiple matching addresses found</fullName>
                </value>
                <value>
                    <fullName>No matching address found</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Animal_Description__c</fullName>
        <label>Animal Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Animal_Type__c</fullName>
        <label>Animal Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dog</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIN_Delivery_As_Soon_as_Possible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Delivery As Soon as Possible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIN_Service_Request_Delivery_Date__c</fullName>
        <label>Service Request Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BIN_Service_Type__c</fullName>
        <description>Bins Service Request Type</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New set of Bins</fullName>
                </value>
                <value>
                    <fullName>Bin Repair/Maintenance</fullName>
                </value>
                <value>
                    <fullName>Stolen Bin</fullName>
                </value>
                <value>
                    <fullName>Wheeled Bin Assistance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIN_Work_Orders__c</fullName>
        <label>Work Orders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CSR_Initials__c</fullName>
        <label>CSR Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caller Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caller_City__c</fullName>
        <label>Caller Suburb</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_ContactID__c</fullName>
        <formula>Caller_Account__r.PersonContactId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Caller ContactID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Country__c</fullName>
        <label>Caller Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Email__c</fullName>
        <label>Caller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Caller_First_Name__c</fullName>
        <label>Caller First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Last_Name__c</fullName>
        <label>Caller Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Other_Phone__c</fullName>
        <label>Caller Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller_Primary_Phone__c</fullName>
        <label>Caller Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Caller_State_Province__c</fullName>
        <label>Caller State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Street_2__c</fullName>
        <label>Caller Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Street__c</fullName>
        <label>Caller Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_Type__c</fullName>
        <label>Caller Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Witness</fullName>
                </value>
                <value>
                    <fullName>Police</fullName>
                </value>
                <value>
                    <fullName>Victim</fullName>
                </value>
                <value>
                    <fullName>Complainant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Caller_Zip_Postal_Code__c</fullName>
        <label>Caller Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Accepted_Timestamp__c</fullName>
        <inlineHelpText>Auto-populated when the case is accepted by the ranger</inlineHelpText>
        <label>Case Accepted (Timestamp)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Id_Hyperlink__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_300, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_300))&amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Id Hyperlink</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Scheduled_Timestamp__c</fullName>
        <inlineHelpText>Auto-populated when case is scheduled</inlineHelpText>
        <label>Case Scheduled (Timestamp)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <description>Contact Title</description>
        <label>Contact Title</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Title</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Incident__c</fullName>
        <label>Date of Incident</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_you_know_where_the_animal_comes_from__c</fullName>
        <label>Do you know where the animal comes from?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dog_has_identification_tag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dog has identification tag?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incident_City__c</fullName>
        <label>Incident City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Country__c</fullName>
        <defaultValue>&apos;Australia&apos;</defaultValue>
        <label>Incident Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Location__c</fullName>
        <label>Incident Location</label>
        <scale>10</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Incident_State_Province__c</fullName>
        <defaultValue>&apos;ACT&apos;</defaultValue>
        <label>Incident State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Street_Location__c</fullName>
        <label>Incident Street Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Street__c</fullName>
        <label>Incident Street No and Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Zip_Postal_Code__c</fullName>
        <label>Incident Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Duplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Duplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Message_left_on_mobile__c</fullName>
        <label>Message left on mobile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_animals__c</fullName>
        <label>Number of animals</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_witnesses__c</fullName>
        <label>Number of witnesses</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Incident_Description__c</fullName>
        <label>Original Incident Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Notice</fullName>
                </value>
                <value>
                    <fullName>Appeal</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Release to owner</fullName>
                </value>
                <value>
                    <fullName>Euthanasia</fullName>
                </value>
                <value>
                    <fullName>Dangerous Dog registry</fullName>
                </value>
                <value>
                    <fullName>Infringement issued</fullName>
                </value>
                <value>
                    <fullName>Infringement Paid</fullName>
                </value>
                <value>
                    <fullName>Controlled Order</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_City__c</fullName>
        <label>Owner City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Country__c</fullName>
        <defaultValue>&apos;Australia&apos;</defaultValue>
        <label>Owner Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_First_Name__c</fullName>
        <label>Owner First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Last_Name__c</fullName>
        <label>Owner Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Primary_Phone__c</fullName>
        <label>Owner Primary Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Owner_State_Province__c</fullName>
        <label>Owner State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Street__c</fullName>
        <label>Owner Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Zip_Postal_Code__c</fullName>
        <label>Owner Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PINFORCE_ID__c</fullName>
        <description>Data Migration</description>
        <externalId>true</externalId>
        <label>PINFORCE ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PSMA_Callout_Timestamp__c</fullName>
        <description>To stamp the time whenever the callout to PSMA is made.</description>
        <label>PSMA Callout Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Other Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ranger_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ranger Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rangers_Name__c</fullName>
        <label>Rangers Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refused_Reason__c</fullName>
        <description>TCCS BINS Card #12. Mandatory when Service Request is refused.</description>
        <label>Refused Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assistance already provided</fullName>
                </value>
                <value>
                    <fullName>Contractor unable to provide service</fullName>
                </value>
                <value>
                    <fullName>Address shares the recycling and garbage facilities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Smartform_Tracking_Code__c</fullName>
        <label>Smartform Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tag_Details__c</fullName>
        <label>Tag Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Ranger_Contacted__c</fullName>
        <label>Time Ranger Contacted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_of_Incident__c</fullName>
        <label>Time of Incident</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>To_Prevent_Validation_Rule__c</fullName>
        <description>This field needs to be populated not to execute validation rule</description>
        <label>To Prevent Validation Rule</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Type</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>WorkType.Name</field>
                <operation>notContain</operation>
                <value>Statement</value>
            </filterItems>
            <filterItems>
                <field>WorkType.Name</field>
                <operation>notContain</operation>
                <value>Seizure</value>
            </filterItems>
            <filterItems>
                <field>WorkType.Name</field>
                <operation>notContain</operation>
                <value>Impound</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>WorkType</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIN_Service_Request_Number__c</fullName>
        <displayFormat>SR{000000}</displayFormat>
        <label>Service Request Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CORE_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>CORE_Address__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Work_Type__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Caller_Street__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>BIN_Customer_Service_All_Open</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.BIN</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>BIN Customer Service - All Open</label>
        <sharedTo>
            <group>BIN_Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIN_Customer_Service_All_Refused</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.BIN</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Refused</value>
        </filters>
        <label>BIN Customer Service - All Refused</label>
        <sharedTo>
            <group>BIN_Customer_Service</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BIN_Customer_Service_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Contact_Title__c</columns>
        <columns>Caller_First_Name__c</columns>
        <columns>Caller_Last_Name__c</columns>
        <columns>Caller_Email__c</columns>
        <columns>Caller_Other_Phone__c</columns>
        <columns>Caller_Primary_Phone__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.BIN</value>
        </filters>
        <label>BIN Customer Service</label>
        <queue>BIN_Customer_Service</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAS_Admin_LV</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>Caller_Primary_Phone__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.DAS</value>
        </filters>
        <label>DAS Admin</label>
        <sharedTo>
            <role>DAS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAS_Investigations_LV</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>DAS Investigations</label>
        <queue>Investigations</queue>
        <sharedTo>
            <role>DAS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAS_Q1_LV</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>DAS Q1</label>
        <queue>Q1</queue>
        <sharedTo>
            <role>DAS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAS_Submitted_for_closure_LV</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Submitted for Closure</value>
        </filters>
        <label>DAS Submitted for closure</label>
        <sharedTo>
            <role>DAS</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <recordTypes>
        <fullName>BIN</fullName>
        <active>true</active>
        <businessProcess>BIN</businessProcess>
        <description>Used for BINS Service Requests</description>
        <label>BIN</label>
    </recordTypes>
    <recordTypes>
        <fullName>DAS</fullName>
        <active>true</active>
        <businessProcess>DAS</businessProcess>
        <label>DAS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tree_Management</fullName>
        <active>false</active>
        <businessProcess>DAS</businessProcess>
        <label>Tree Management</label>
    </recordTypes>
    <validationRules>
        <fullName>DAS_VR_CAS01_Restrict_Editing_the_Case</fullName>
        <active>true</active>
        <description>This is related to DAS Business unit</description>
        <errorConditionFormula>AND(
				NOT(ISCHANGED(To_Prevent_Validation_Rule__c)),
				NOT(ISPICKVAL(Status,&apos;Investigation Completed&apos;)),
				NOT(ISPICKVAL(Status,&apos;In Progress&apos;)),
				TEXT(PRIORVALUE(Status))= &apos;Requires Investigation&apos;,
				RecordType.DeveloperName = &apos;DAS&apos;
)</errorConditionFormula>
        <errorMessage>You cannot edit when a case is under investigation</errorMessage>
    </validationRules>
</CustomObject>